--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,11 @@ dependencies {
     //okhttp3
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
 
+    //Room
+    implementation "androidx.room:room-runtime:2.3.0"
+    // optional - Kotlin Extensions and Coroutines support for Room
+    implementation "androidx.room:room-ktx:2.3.0"
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
