--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,14 @@ android {
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_1_8.toString()
     }
+
+    packagingOptions {
+        exclude 'META-INF/AL2.0'
+        exclude 'META-INF/LGPL2.1'
+        exclude "**/attach_hotspot_windows.dll"
+        exclude "META-INF/licenses/**"
+    }
+
 }
 
 dependencies {
@@ -82,6 +90,9 @@ dependencies {
     testImplementation "androidx.arch.core:core-testing:2.1.0"
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.1'
     testImplementation 'org.robolectric:robolectric:4.4'
+
+    debugImplementation "androidx.fragment:fragment-testing:1.3.5"
+    debugImplementation 'androidx.test:core:1.4.0'
 
     androidTestImplementation 'androidx.test:core:1.4.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
